--- a/bootstrap/templates/kubernetes/flux/vars/cluster-secrets-user.sops.yaml.j2
+++ b/bootstrap/templates/kubernetes/flux/vars/cluster-secrets-user.sops.yaml.j2
@@ -6,3 +6,4 @@ metadata:
   namespace: flux-system
 stringData:
   SECRET_PLACEHOLDER: "secret-value"
+  SECRET_MAXMIND_LICENSE_KEY: "{{ bootstrap_maxmind_license_key }}"
