--- a/bootstrap/templates/kubernetes/flux/vars/cluster-secrets.sops.yaml.j2
+++ b/bootstrap/templates/kubernetes/flux/vars/cluster-secrets.sops.yaml.j2
@@ -9,3 +9,4 @@ stringData:
   SECRET_DOMAIN2: "{{ bootstrap_cloudflare_domain2 }}"
   SECRET_ACME_EMAIL: "{{ bootstrap_acme_email }}"
   SECRET_CLOUDFLARE_TUNNEL_ID: "{{ bootstrap_cloudflare_tunnel_id }}"
+  SECRET_MAXMIND_LICENSE_KEY: "{{ bootstrap_maxmind_license_key }}"
