--- a/bootstrap/templates/kubernetes/flux/vars/cluster-secrets-user.sops.yaml.j2
+++ b/bootstrap/templates/kubernetes/flux/vars/cluster-secrets-user.sops.yaml.j2
@@ -7,3 +7,5 @@ metadata:
 stringData:
   SECRET_PLACEHOLDER: "secret-value"
   SECRET_MAXMIND_LICENSE_KEY: "{{ bootstrap_maxmind_license_key }}"
+  SECRET_POSTGRES_USERNAME: "{{ bootstrap_postgres_username }}"
+  SECRET_POSTGRES_PASSWORD: "{{ bootstrap_postgres_password }}"
