--- a/bootstrap/templates/ansible/playbooks/cluster-prepare.yaml.j2
+++ b/bootstrap/templates/ansible/playbooks/cluster-prepare.yaml.j2
@@ -79,11 +79,11 @@
             dest: /etc/profile.d/neofetch.sh
             mode: "0755"
             content: neofetch --config none
-        - name: System Configuration | Disable apparmor
+        {# - name: System Configuration | Disable apparmor
           ansible.builtin.systemd:
             name: apparmor
             state: stopped
-            masked: true
+            masked: true #}
         - name: System Configuration | Disable swap
           ansible.posix.mount:
             name: "{% raw %}{{ item }}{% endraw %}"
